test/compile_errors/err_unit_elision_non_unit_unwrap_or.w
//! expect-check-fail: Result.unwrap_or() expects exactly one argument

fn main:
    let r: Result[i32, str] = Err("fail")
    r.unwrap_or()
